--- a/style/groupe2.style.css
+++ b/style/groupe2.style.css
@@ -1,9 +1,87 @@
 body{
-    /*background-color: blue;*/
+    background-attachment: fixed;
+    background-repeat: space;;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    align-items: center;
+    margin-left: 5em;
+    margin-right: 5em;
 }
 h1{
-    color: red;
-    font-size: 19px;
-    font-weight: 100;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
+/* ici le header est un élément parent les propriétés permet d'alligne et de centrer les élément fils de header*/
+header{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo-wrapper{
+    padding: none;
+}
+.form-wrapper{
+    position: relative;
+    display: flex;
+}
+.btn-btn-succes{
+    color: white;
+    background-color: #ff3300;
+    height: 40px;
+    border: none;
+}
+.search-bar{
+    height: 30px;
+}
+nav ul{ 
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    color: #ff3300;
+    list-style-type: none ;
+    padding-right: 20px;
+    border-bottom: solid ;
+}
+nav ul li a{
+    color: #ff3300;
+    list-style-type: none;
+}
+
+.presentation-wrapper{
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: whitesmoke;
+}
+main div div h1{
+    color: #ff3300;
+}
+main div div h1 span{
+    color: violet;
+}
+main div div h1,p{
+    padding-left: 20px;
+}
+.post-wrapper{
+    background: url("https://images.unsplash.com/photo-1545911678-09d0843ccef1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60") no-repeat center fixed;
+    top:0;
+    -webkit-background-size: cover; /* pour anciens Chrome et Safari */
+  background-size: cover; /* version standardisée */
+  padding-bottom: 2em;
+  }
+  .post-title{
+      text-align: center;
+      padding-top: 1em;
+  }
+  .post-items-wrapper{
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+background-color: whitesmoke;
+  }
+  .post-item-wrapper{
+      padding: 1em;
+      padding-top: 2em;
+      padding-bottom: 2em;
+  }
